...

      <ScrollView style={styles.scrollViewContainer} keyboardShouldPersistTaps='handled'>
        <KeyboardAvoidingView behavior='padding'>
          <View style={[globalStyles.cardContainer, styles.searchContainer]}>
            <ThemedText type='subtitle'>Curious about an animal?</ThemedText>
            <ThemedText textColor='quietText'>{'We will try to give you information based on what we have available...'}</ThemedText>
            <ThemedInput testID='search_input' withShadow value={animalName} onChangeText={setAnimalName} placeholder={error} />
            <ThemedButton testID='search_btn' withShadow title='Search' isLoading={isLoading} onPress={() => onSubmit()} />
          </View>
        </KeyboardAvoidingView>
        {animals.length ?
          <View style={styles.recentContainer} testID='recent_view'>
            <ThemedText textColor='quietText'>Recent</ThemedText>
            {animals.map((val, index) => (
...
