...
    }
  }, [fromNav, animal]);

  return animal ? (
    <ThemedView isSafeArea style={globalStyles.container} backgroundColor='background'>
      <View style={globalStyles.titleContainer}>
        <ThemedText testID='animal_name' type="title">{animal.name}</ThemedText>
      </View>
      {animal?.imageUrl &&
        <Image source={{ uri: animal?.imageUrl }} style={[styles.animalImage, globalStyles.shadowProps]} />
      }
      <ScrollView style={{ flex: 1 }}>
        <ThemedView withShadow style={[globalStyles.cardContainer, { flex: undefined }]} backgroundColor='secondaryBackground'>
...
